--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -10,19 +10,25 @@
 </table>
 <br>
 <h2>Requests</h2>
+<div class='col-md-6'>
 <table>
-  <th>Start Date</th><th>End Date</th><th>Status</th>
-  <% @cat.requests.order(:start_date).each do |request| %>
-    <tr>
-      <td> <%= request.start_date %> </td>
-      <td> <%= request.end_date %> </td>
-      <td> <%= request.status %> </td>
-      <% if request.pending? %>
-        <td> <%= button_to 'Approve Rental', approve_rental_url(request.id), method: :patch %></td>
-        <td> <%= button_to 'Deny Rental', deny_rental_url(request.id), method: :patch %></td>
-      <% end %>
-    </tr>
-  <% end %>
+  <thead>
+    <th>Start Date</th><th>End Date</th><th>Status</th>
+  </thead>
+  <tbody>
+    <% @cat.requests.order(:start_date).each do |request| %>
+      <tr>
+        <td> <%= request.start_date %> </td>
+        <td> <%= request.end_date %> </td>
+        <td> <%= request.status %> </td>
+        <% if request.pending? %>
+          <td> <%= button_to 'Approve', approve_rental_url(request.id), method: :patch, class: 'btn btn-xs btn-primary' %></td>
+          <td> <%= button_to 'Deny', deny_rental_url(request.id), method: :patch, class: 'btn btn-xs btn-danger' %></td>
+        <% end %>
+      </tr>
+    <% end %>
+  </tbody>
 </table>
+</div>
 <br>
 <%= link_to 'Cats index', cats_url %>
