tables! user/cat associations and update views

--- a/app/views/cats/show.html.erb
+++ b/app/views/cats/show.html.erb
@@ -1,30 +1,37 @@
 <h1> <%= @cat.name %> </h1>
-<table>
-  <th>birth date</th><th>color</th><th>sex</th><th>description</th>
-  <tr>
-    <td> <%= @cat.birth_date %> </td>
-    <td> <%= @cat.color %> </td>
-    <td> <%= @cat.sex %> </td>
-    <td> <%= @cat.description %> </td>
+<table class='table' align-content='center' style='width: 50%;'>
+  <th class='col-md-2 text-center'>Birth Date</th>
+  <th class='col-md-1 text-center'>Color</th>
+  <th class='col-md-1 text-center'>Sex</th>
+  <th class='col-md-2 text-center'>Owner</th>
+  <th class='col-md-3 text-center'>Description</th>
+  <tr style='border-style: solid;'>
+    <td class='text-center' style='border-style: solid; border-width: thin;'> <%= @cat.birth_date %> </td>
+    <td class='text-center' style='border-style: solid; border-width: thin;'> <%= @cat.color %> </td>
+    <td class='text-center' style='border-style: solid; border-width: thin;'> <%= @cat.sex %> </td>
+    <td class='text-center' style='border-style: solid; border-width: thin;'> <%= @cat.owner.user_name %> </td>
+    <td class='text-center' style='border-style: solid; border-width: thin;'> <%= @cat.description %> </td>
   </tr>
 </table>
 <br>
 <h2>Requests</h2>
 <div class='container-fluid'>
-<table>
+<table class='table' align-content='center' style='width: 50%;'>
   <thead>
     <th>Start Date</th><th>End Date</th><th>Status</th>
   </thead>
   <tbody>
     <% @cat.requests.order(:start_date).each do |request| %>
       <tr>
-        <td> <%= request.start_date %> </td>
-        <td> <%= request.end_date %> </td>
-        <td> <%= request.status %> </td>
-        <% if request.pending? %>
-          <td> <%= button_to 'Approve', approve_rental_url(request.id), method: :patch, class: 'btn btn-xs btn-primary' %></td>
-          <td> <%= button_to 'Deny', deny_rental_url(request.id), method: :patch, class: 'btn btn-xs btn-danger' %></td>
-        <% end %>
+        <td style='width: 30%;'> <%= request.start_date %> </td>
+        <td style='width: 30%;'> <%= request.end_date %> </td>
+        <td style='width: 20%;'> <%= request.status %> </td>
+        <td style='width: 10%;'>
+          <%= button_to 'Approve', approve_rental_url(request.id), method: :patch, class: 'btn btn-xs btn-primary' if request.pending? && current_user == @cat.owner %>
+        </td>
+        <td style='width: 10%;'>
+          <%= button_to 'Deny', deny_rental_url(request.id), method: :patch, class: 'btn btn-xs btn-danger' if request.pending? && current_user == @cat.owner %>
+        </td>
       </tr>
     <% end %>
   </tbody>
