--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,18 @@
 <body>
 
 <% if current_user %>
-  <div class="page-header">
-    <h1>Hi <%= current_user.user_name %>!</h1> <%= button_to 'Logout', session_url, method: :delete, class: 'btn btn-danger' %>
-  </div>
+  <nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="nav navbar-nav" style="font-size: 40px; color: #fff">
+        <%= current_user.user_name %>
+      </div>
+      <div class="navbar-right">
+        <%= button_to 'Logout', session_url, method: :delete, class: 'btn btn-lg btn-danger' %>
+      </div>
+    </div>
+  </nav>
 <% else %>
-  <%= button_to 'Go to sign in page', new_session_url, method: :get, class: 'btn btn-primary' %>
+  <%= link_to 'Go to sign in page', new_session_url, class: 'btn btn-primary', role: "button" %>
 <% end %>
 
 <% flash.each do |type, messages| %>
@@ -23,8 +30,8 @@
    <div><%= message %></div>
  <% end %>
 <% end %>
-
-<%= yield %>
-
+<div class="container-fluid">
+  <%= yield %>
+</div>
 </body>
 </html>
